<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wrapper_input_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_16"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="@dimen/input_border_size"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/wrapper_input_variant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="false"
            android:background="?android:attr/windowBackground"
            android:hint="@string/hint_enter_name"
            android:inputType="text"
            android:lines="1"
            android:textSize="@dimen/text_size_20" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wrapper_input_variant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="@dimen/input_border_size"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/wrapper_input_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrapper_input_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_variant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="false"
            android:background="?android:attr/windowBackground"
            android:hint="@string/hint_enter_variant"
            android:inputType="number"
            android:lines="1"
            android:textSize="@dimen/text_size_20" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wrapper_input_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="@dimen/input_border_size"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/wrapper_input_parameters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrapper_input_variant">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="false"
            android:background="?android:attr/windowBackground"
            android:hint="@string/hint_enter_description"
            android:inputType="text"
            android:lines="1"
            android:textSize="@dimen/text_size_20" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wrapper_input_parameters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="@dimen/input_border_size"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/button_to_fragment_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrapper_input_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_parameters"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="false"
            android:background="?android:attr/windowBackground"
            android:hint="@string/hint_enter_parameters"
            android:inputType="number"
            android:lines="1"
            android:textSize="@dimen/text_size_20" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_to_fragment_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        app:backgroundTint="@color/colorPrimary"
        android:text="@string/text_button_to_fragment_b"
        app:layout_constraintBottom_toTopOf="@+id/button_to_fragment_c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrapper_input_parameters" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_to_fragment_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@drawable/rounded_corners"
        app:backgroundTint="@color/colorPrimary"
        android:text="@string/text_button_to_fragment_c"
        app:layout_constraintBottom_toTopOf="@+id/button_to_fragment_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_to_fragment_b" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_to_fragment_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corners"
        app:backgroundTint="@color/colorPrimary"
        android:text="@string/text_button_to_fragment_d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_to_fragment_c" />

</androidx.constraintlayout.widget.ConstraintLayout>